<resources>
    <string name="app_name">Sets Counter</string>
    <string name="_66_66">66:66</string>
    <string name="start">Start</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="stop">STOP</string>
    <string name="stop_workout">Stop workout</string>
    <string name="choose_workout">Choose workout</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_a_new_workout">Add a new workout</string>
    <string name="save">Save</string>
    <string name="choose_name">Choose name</string>
    <string name="choose_workout_name">Choose workout name</string>
    <string name="add_exercise">Add exercise</string>
    <string name="sets_1">Sets: 1</string>
    <string name="weight_150">Weight: 150</string>
    <string name="sets">Sets</string>
    <string name="name">Name</string>
    <string name="exercise_name">Exercise name</string>
    <string name="_150">150</string>
    <string name="weight">Weight</string>
    <string name="workout_name">Workout name</string>
    <string name="chooses_the_exercise_to_the_left_of_the_current_one">Chooses the exercise to the left of the current one.</string>
    <string name="chooses_the_exercise_to_the_right_of_the_current_one">Chooses the exercise to the right of the current one</string>
    <string name="deletes_workout">Deletes workout</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_it">Are you sure you want to delete it?</string>
    <string name="cancel">Cancel</string>
</resources>
