<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="wrap_content"
    android:id="@+id/exerciseLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/exercise_name"
        android:textColor="#f66"
        android:textSize="20sp"
        android:maxLength="15"
        android:id="@+id/exerciseName"
        android:layout_marginStart="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textColor="#f66"
        android:textSize="20sp"
        android:id="@+id/exerciseSets"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="163dp"
        android:layout_marginEnd="163dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_150"
        android:textColor="#f66"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        android:id="@+id/exerciseWeight"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="end" />

</RelativeLayout>