<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#fff">

    <TextView
        android:id="@+id/workoutDeleteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="#f66"
        android:textAlignment="center"
        android:text="@string/are_you_sure_you_want_to_delete_it"
        android:gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/workoutDeleteText"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/deleteWorkoutPopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_marginLeft="10dp"
            android:background="@drawable/save"
            android:layout_toRightOf="@id/cancelDeletion"
            android:layout_toEndOf="@id/cancelDeletion"
            android:layout_marginStart="10dp" />

        <Button
            android:id="@+id/cancelDeletion"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#f66"
            android:background="@drawable/stop_timer"
            android:text="@string/cancel"
            android:layout_marginEnd="10dp" />

    </RelativeLayout>



</RelativeLayout>