<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="245dp"
    android:background="#f66"
    android:id="@+id/exerciseForm">

    <EditText
        android:layout_width="wrap_content"
        android:maxWidth="150dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/exercise_name"
        android:layout_alignParentTop="true"
        android:cursorVisible="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:backgroundTint="#fff"
        android:id="@+id/insertName"
        android:textColorHighlight="#33ffffff"
        android:inputType="text"
        android:gravity="center_horizontal"
        android:imeOptions="actionDone"
        tools:targetApi="lollipop"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/sets"
        android:layout_below="@id/insertName"
        android:cursorVisible="false"
        android:layout_centerHorizontal="true"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:backgroundTint="#fff"
        android:id="@+id/insertSets"
        android:textColorHighlight="#33ffffff"
        android:inputType="numberSigned"
        android:imeOptions="actionDone"
        android:maxLength="1"
        android:gravity="center_horizontal"
        tools:targetApi="lollipop"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/weight"
        android:layout_below="@id/insertSets"
        android:cursorVisible="false"
        android:layout_centerHorizontal="true"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:imeOptions="actionDone"
        android:backgroundTint="#fff"
        android:id="@+id/insertWeight"
        android:textColorHighlight="#33ffffff"
        android:inputType="numberSigned"
        android:maxLength="3"
        android:gravity="center_horizontal"
        tools:targetApi="lollipop"
        android:importantForAutofill="no" />

    <Button
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@drawable/stop_timer"
        android:textColor="#f66"
        tools:targetApi="jelly_bean"
        android:id="@+id/saveExercise"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="22dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>