<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.addWorkout"
    android:background="#fff">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:hint="@string/choose_workout_name"
        android:layout_alignParentTop="true"
        android:cursorVisible="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textColor="#f66"
        android:textColorHint="#f66"
        android:backgroundTint="#f66"
        android:id="@+id/workoutName"
        android:textColorHighlight="#33ff6666"
        android:inputType="text"
        tools:targetApi="lollipop"
        android:gravity="center_horizontal"
        tools:ignore="Autofill" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/add_exercise"
        android:background="@drawable/save"
        android:textAllCaps="false"
        android:layout_below="@id/workoutName"
        android:textColor="#fff"
        android:textSize="20sp"
        android:layout_marginTop="35dp"
        android:id="@+id/addExercise"
        android:layout_centerHorizontal="true"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/addExercise"
        android:id="@+id/exerciseList"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textAllCaps="false"
        android:layout_below="@id/exerciseList"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/saveWorkout"
        android:background="@drawable/save"/>

</RelativeLayout>